client/src/components/Navbar/index.module.css
.sidebar {
    width: 100%;
    height: 10vh;
    background-color: rgba(15, 71, 77, 0.3);
    display: flex;
    justify-content: space-between;
    align-items: center;
    transition: .8s;
    position: fixed;
    top: 0;
    font-family: 'Raleway', sans-serif;
}

.line {
    background-image: url(../../static/home.svg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 2rem;
    width: 2rem;
    margin-left: 1vw;
}

.nav {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    margin-right: 2vw;
}

.nav__li {
    padding: 0 2vw;
    font-size: 1.1rem;
    transition: 0.5s;
    color: #fff;
    border-right: 1px solid rgba(255, 255, 255, 0.5);
}


.nav__li__themes {
    color: #fff;
    outline: none;
    transition: 0.5s;
}

.nav__sub {
    position: absolute;
    top: 10vh;
}

.nav__li:hover,
.nav__li__themes:hover {
    cursor: pointer;
    outline: none;
    color: #fff;
}

  @media screen and (max-width: 890px) {
    .sidebar {
       flex-direction: column;
       align-items: flex-start;
       height: 100vh;
       width: 7vw;
       top:0;
       left: 0;
       transition:0.5s;
       overflow: hidden;
    }
    .sidebar:hover{
        width: auto;
    }
    .line{
        margin: 2vw;
        height: 1.5rem;
        width: 1.5rem;
    }
    .nav{
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-start;
    }
    .nav__li{
        border-right: none;
        padding-bottom: 0.5rem;
        padding-left: 7vw;
    }
  }
  @media screen and (max-width: 530px) {
      .line{
        height: 1rem;
        width: 1rem;
      }
  }

